<resources>
    <string name="app_name">Vitalize</string>
    <string name="home_no_title">italize</string>
    <string name="slogan">Comienza a crear una rutina saludable con</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicia_sesión">Inicia sesión</string>
    <string name="objetivo">Objetivo</string>
    <string name="consumo">Consumo</string>
    <string name="desayuno">Desayuno</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="cena">Cena</string>
    <string name="aperitivos">Aperitivos</string>
    <string name="restante">Restante</string>
    <string name="racha">RACHA</string>
    <string name="email">email</string>
    <string name="nombre">nombre</string>
    <string name="contraseña">contraseña</string>
    <string name="confirmar_contraseña">confirmar contraseña</string>
    <string name="user">User</string>
    <string name="list">List</string>
    <string name="scan">Scan</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="mensajeTituloInicioCorrecto">Inicio sesión correcto</string>
    <string name="perfil">Perfil</string>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="edita_el_perfil_del_usuario">Edita el perfil del usuario</string>
    <string name="vuelve_a_la_p_gina_anterior">Vuelve a la página anterior</string>
    <string name="peso_del_usuario">Peso del usuario</string>
    <string name="altura_del_usuario">Altura del usuario</string>
    <string name="menos">-</string>
    <string name="igual">=</string>
    <string name="simbolo_mas">+</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="barra_separadora_de_las_comidas_del_d_a">Barra separadora de las comidas del día</string>
    <string name="informaci_n_con_detalle_de_las_calor_as_carbohidratos_prote_nas_y_grasa_consumidos">Información con detalle de las calorías, carbohidratos, proteínas y grasa consumidos</string>
    <string name="mas_detalle">más detalle</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="registrar_peso">Registrar peso</string>
    <string name="fecha_seleccionada">Fecha seleccionada</string>
    <string-array name="estaturas">
        <item>150</item>
        <item>151</item>
        <item>152</item>
        <item>153</item>
        <item>154</item>
        <item>155</item>
        <item>156</item>
        <item>157</item>
        <item>158</item>
        <item>159</item>
        <item>160</item>
        <item>161</item>
        <item>162</item>
        <item>163</item>
        <item>164</item>
        <item>165</item>
        <item>166</item>
        <item>167</item>
        <item>168</item>
        <item>169</item>
        <item>170</item>
        <item>171</item>
        <item>172</item>
        <item>173</item>
        <item>174</item>
        <item>175</item>
        <item>176</item>
        <item>177</item>
        <item>178</item>
        <item>179</item>
        <item>180</item>
        <item>181</item>
        <item>182</item>
        <item>183</item>
        <item>184</item>
        <item>185</item>
        <item>186</item>
        <item>187</item>
        <item>188</item>
        <item>189</item>
        <item>190</item>
        <item>191</item>
        <item>192</item>
        <item>193</item>
        <item>194</item>
        <item>195</item>
        <item>196</item>
        <item>197</item>
        <item>198</item>
        <item>199</item>
        <item>200</item>
    </string-array>
    <string-array name="pesos_decimales">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="pesos">
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string name="producto">producto</string>
    <string name="despensa">Despensa</string>
    <string name="escaneo">Escaneo</string>
    <string name="producto_escaneado">Producto escaneado</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="a_adir_a_dieta">Añadir a dieta</string>
    <string name="a_adir_a_despensa">Añadir a despensa</string>
    <string name="no_encuentra_el_producto_deseado">¿No encuentra el producto deseado?</string>
    <string name="sugerir_producto">Sugerir producto</string>
    <string name="busqueda">Búsqueda</string>
    <string name="_100g">100g</string>
    <string name="objetivos">OBJETIVOS</string>
    <string name="calor_as">Calorías:</string>
    <string name="kcal">kcal</string>
    <string name="generar_dieta">Generar Dieta</string>

</resources>