<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userViewModel"
            type="com.example.vitalize.viewModels.UserViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".view.SignUp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/logoUserRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/logo_user" />

            <EditText
                android:id="@+id/editTextNameRegister"
                style="@style/TextStyleInput"
                android:layout_marginTop="44dp"
                android:background="@drawable/input"
                android:drawableLeft="@drawable/icon_user_input"
                android:hint="@string/nombre"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextEmailAddressRegister"
                style="@style/TextStyleInput"
                android:layout_marginTop="14dp"
                android:background="@drawable/input"
                android:drawableLeft="@drawable/icon_mail_input"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPasswordRegister"
                style="@style/TextStyleInput"
                android:layout_marginTop="14dp"
                android:autofillHints=""
                android:background="@drawable/input"
                android:drawableStart="@drawable/icon_password_input"
                android:hint="@string/contraseña"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextRepeatPasswordRegister"
                style="@style/TextStyleInput"
                android:layout_marginTop="14dp"
                android:autofillHints=""
                android:background="@drawable/input"
                android:drawableStart="@drawable/icon_password_input"
                android:hint="@string/confirmar_contraseña"
                android:inputType="textPassword"
                android:textSize="14dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRegister"
                style="@style/ButtonStyle"
                android:layout_width="143dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/input"
                android:text="@string/registrarse"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/IniciaSesionRegister"
                style="@style/TextStyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/inicia_sesion"
                android:textSize="15sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>