<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logoUserRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_user" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        style="@style/ButtonStyle"
        android:layout_width="143dp"
        android:layout_height="31dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPasswordRegister"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextNameRegister"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/icon_user_input"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/nombre"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoUserRegister" />

    <EditText
        android:id="@+id/editTextEmailAddressRegister"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/icon_mail_input"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameRegister" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:drawableStart="@drawable/icon_password_input"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressRegister" />

    <EditText
        android:id="@+id/editTextRepeatPasswordRegister"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:drawableStart="@drawable/icon_password_input"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/confirmar_contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister" />

    <TextView
        android:id="@+id/IniciaSesionRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/inicia_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>