<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--<data>
        <variable
            name="userViewModel"
            type="com.example.vitalize.user.UserViewModel" />
    </data>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".HomeSession">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="412dp"
            android:layout_height="90dp"
            android:background="@drawable/datos_calorias_home"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="101dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cantidad_objetivo"
                    style="@style/TextStyleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2000"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/texto_objetivo"
                    style="@style/TextStyleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/objetivo"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/menos_texto"
                style="@style/TextStyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menos"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="91dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cantidad_consumo"
                    style="@style/TextStyleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="800"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/texto_consumo"
                    style="@style/TextStyleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consumo"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/igual_texto"
                style="@style/TextStyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/igual"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="111dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cantidad_restante"
                    style="@style/TextStyleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1200"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/texto_restante"
                    style="@style/TextStyleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/restante"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/text_mas_detalle"
            style="@style/TextStyleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="136dp"
            android:text="más detalle"
            android:textColor="@color/green_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.588"
            app:layout_constraintStart_toEndOf="@+id/icon_info"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ImageView
            android:id="@+id/icon_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/info_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:contentDescription="@string/informaci_n_con_detalle_de_las_calor_as_carbohidratos_prote_nas_y_grasa_consumidos" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_mas_detalle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nombre_comida_del_dia"
                    style="@style/TextStyleText"
                    android:layout_width="277dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desayuno"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/más_ampliar"
                    style="@style/TextStyleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/simbolo_mas"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/barra_separadora"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:src="@drawable/barra_home"
                android:contentDescription="@string/barra_separadora_de_las_comidas_del_d_a" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="68dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagen_producto"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/logo_with_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombre_producto"
                    style="@style/TextStyleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nombre del producto" />

                <TextView
                    android:id="@+id/peso_producto"
                    style="@style/TextStyleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100g" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>